2003-07-20 Craig Franklin <craigfranklin@comcast.net>
  * Added new processors: 16f716, 18f2620, 18f4620
  * Update header files and linker scripts.
  * Fixed gplink error that caused the map file to always be generated.
  * Fixed bug in gpasm that caused 18xx access bank bit to be ignored if it
    was specified on some instructions.
  * Changed gpdasm 18xx address format from word to byte. 

2003-07-07 Craig Franklin <craigfranklin@comcast.net>
  * Changed extension of gplink object output from ".o" to ".out"
  * Fixed error in RES directive when used for data sections.
  * Fixed typo in gp_date_string.

2003-06-28 Craig Franklin <craigfranklin@comcast.net>
  * gputils 0.11.5 Released.
  * Fixed byte count when RES directive is used in 18xx data sections.
  * Display help when multiple files are passed to gpasm, gpdasm, gpvo, 
    and gpvc on the command line.
  * Check for lower case filename if include file is not found.

2003-06-23 Craig Franklin <craigfranklin@comcast.net>
  * Extended the legal syntax for difference of coff symbols within the same
    section.

2003-06-22 Craig Franklin <craigfranklin@comcast.net>
  * Changed coff to use byte addressing for program memory of 18xx devices.
  * Changed absolute coff sections generated with org directive to use
    org_"number" for a name instead of org_"address".
  * Added missing relocation for "$" symbol.
  * Fixed bug in gpvo which could cause section data to not be printed for
    18xx devices.
  * Added range warning to gplink for 18xx relative branches.
  * Changed default behavior of the 18xx access bit in gplink to be like
    gpasm. 
  * Changed build directory for rpms.

2003-06-14 Craig Franklin <craigfranklin@comcast.net>
  * Fixed error in the range check for 17xx movpf and movfp instructions.

2003-06-04 Craig Franklin <craigfranklin@comcast.net>
  * gputils 0.11.4 Released.
  * Replaced or removed obsolete macros in configure.ac.

2003-06-01 Craig Franklin <craigfranklin@comcast.net>