@@ -27,6 +27,4 @@ gpasm
 
 gplink
   * Implement idata.
-  * Complete protected features.
   * Check the 18xx relocations.
-  * Handle sharebank and accessbank sections properly.
