@@ -22,6 +22,17 @@ Boston, MA 02111-1307, USA.  */
 #ifndef SCRIPT_H
 #define SCRIPT_H
 
+#define SCRIPT_ERROR1(x) gp_error("%s:%d:Error %s", \
+                                  state.src->name,\
+                                  state.src->line_number,\
+                                  x);
+
+#define SCRIPT_ERROR2(x, y) gp_error("%s:%d:Error %s (%s)", \
+                                     state.src->name,\
+                                     state.src->line_number,\
+                                     x,\
+                                     y);
+
 /* Parse node: created by the parser, interpreted by the 'backend' */
 
 struct pnode {
